# avr32-playground

./: .gitignore  Building-AVR32-stuff-without-AVRStudio  README.md
Framebuffer/: Framebuffer.cpp  Framebuffer.hpp  FramebufferConsole.cpp  FramebufferConsole.hpp  SSD1306.cpp  SSD1306.hpp  Scope.cpp  Scope.hpp
Framebuffer/fonts/: font3x5.h  font5x8.h  font6x8.h  tom_thumb.h
Stream/: BaseOutStream.cpp  BaseOutStream.hpp  USARTStream.cpp  USARTStream.hpp  formatting.cpp  formatting.hpp
base/: CMakeLists.txt
base/config/: conf_board.h
base/src/: CMakeLists.txt
cmake/: atmel-software-framework.cmake  avr32-toolchain.cmake
console/: CMakeLists.txt
console/config/: conf_board.h  conf_system.h  conf_usart_serial.h
console/src/: CMakeLists.txt  console.cpp
cube/: CMakeLists.txt
cube/config/: conf_board.h  conf_clock.h
cube/src/: ArrayM.hpp  CMakeLists.txt  MatrixMxM.hpp  Render.cpp  Render.hpp  VectorM.hpp  arduino3d.h  cube.cpp  matrixmath.hpp  millis.c  millis.h  utility3d.cpp  utility3d.hpp
hardware/chiplab7/: README  init.c  init.h  system_init.cpp  system_init.h  user_board.h
sensors/: IMU.cpp  IMU.h  IMU.hpp  Wii.cpp  Wii.h  Wii.hpp  gpl-3.0.dox  mainpage.dox
sensors/MotionPlus_example/: MotionPlus_example.ino
sensors/apidocs/: Doxyfile  gen-docs.sh
servo/: servo.c  servo.h
stubs/: SOURCE  _isatty.h  environ.h  execve.h  fork.h  fstat.h  getpid.h  isatty.h  kill.h  link.h  lseek.h  newdel.hpp  read.h  sbrk.h  stat.h  times.h  unlink.h  wait.h  write.h
system/: console.cpp  console.h  framebuffer.cpp  framebuffer.hpp  streams.cpp  streams.hpp  system.h  system_init.c  system_init.h  tick.c  tick.h
wii/: CMakeLists.txt
wii/config/: conf_clock.h  conf_system.h  conf_twi.h
wii/src/: CMakeLists.txt  wii.cpp
wiiservo/config/: conf_board.h  conf_system.h  conf_twim.h  conf_usart_serial.h
wiiservo/src/: CMakeLists.txt  wiiservo.cpp
